libraries/attestation/azure-trusted-launch-attestation/src/generate/snapshots/azure_trusted_launch_attestation__generate__collateral__get_ak_cert_chain-2.snap
---
source: azure-trusted-launch-attestation/src/generate/collateral.rs
expression: "ak_cert_chain[2]"
---
[
    48,
    130,
    5,
    176,
    48,
    130,
    3,
    152,
    160,
    3,
    2,
    1,
    2,
    2,
    16,
    81,
    244,
    49,
    218,
    44,
    146,
    8,
    138,
    78,
    41,
    224,
    217,
    41,
    222,
    74,
    167,
    48,
    13,
    6,
    9,
    42,
    134,
    72,
    134,
    247,
    13,
    1,
    1,
    12,
    5,
    0,
    48,
    105,
    49,
    11,
    48,
    9,
    6,
    3,
    85,
    4,
    6,
    19,
    2,
    85,
    83,
    49,
    30,
    48,
    28,
    6,
    3,
    85,
    4,
    10,
    19,
    21,
    77,
    105,
    99,
    114,
    111,
    115,
    111,
    102,
    116,
    32,
    67,
    111,
    114,
    112,
    111,
    114,
    97,
    116,
    105,
    111,
    110,
    49,
    58,
    48,
    56,
    6,
    3,
    85,
    4,
    3,
    19,
    49,
    65,
    122,
    117,
    114,
    101,
    32,
    86,
    105,
    114,
    116,
    117,
    97,
    108,
    32,
    84,
    80,
    77,
    32,
    82,
    111,
    111,
    116,
    32,
    67,
    101,
    114,
    116,
    105,
    102,
    105,
    99,
    97,
    116,
    101,
    32,
    65,
    117,
    116,
    104,
    111,
    114,
    105,
    116,
    121,
    32,
    50,
    48,
    50,
    51,
    48,
    30,
    23,
    13,
    50,
    51,
    48,
    54,
    48,
    49,
    49,
    56,
    48,
    56,
    53,
    51,
    90,
    23,
    13,
    52,
    56,
    48,
    54,
    48,
    49,
    49,
    56,
    49,
    53,
    52,
    49,
    90,
    48,
    105,
    49,
    11,
    48,
    9,
    6,
    3,
    85,
    4,
    6,
    19,
    2,
    85,
    83,
    49,
    30,
    48,
    28,
    6,
    3,
    85,
    4,
    10,
    19,
    21,
    77,
    105,
    99,
    114,
    111,
    115,
    111,
    102,
    116,
    32,
    67,
    111,
    114,
    112,
    111,
    114,
    97,
    116,
    105,
    111,
    110,
    49,
    58,
    48,
    56,
    6,
    3,
    85,
    4,
    3,
    19,
    49,
    65,
    122,
    117,
    114,
    101,
    32,
    86,
    105,
    114,
    116,
    117,
    97,
    108,
    32,
    84,
    80,
    77,
    32,
    82,
    111,
    111,
    116,
    32,
    67,
    101,
    114,
    116,
    105,
    102,
    105,
    99,
    97,
    116,
    101,
    32,
    65,
    117,
    116,
    104,
    111,
    114,
    105,
    116,
    121,
    32,
    50,
    48,
    50,
    51,
    48,
    130,
    2,
    34,
    48,
    13,
    6,
    9,
    42,
    134,
    72,
    134,
    247,
    13,
    1,
    1,
    1,
    5,
    0,
    3,
    130,
    2,
    15,
    0,
    48,
    130,
    2,
    10,
    2,
    130,
    2,
    1,
    0,
    186,
    12,
    51,
    11,
    221,
    68,
    158,
    254,
    109,
    109,
    52,
    105,
    210,
    132,
    213,
    87,
    166,
    54,
    162,
    82,
    251,
    110,
    188,
    82,
    183,
    188,
    65,
    199,
    217,
    93,
    83,
    172,
    84,
    237,
    182,
    248,
    242,
    253,
    89,
    26,
    15,
    157,
    106,
    52,
    175,
    151,
    85,
    162,
    137,
    152,
    25,
    186,
    27,
    135,
    129,
    194,
    239,
    107,
    61,
    176,
    102,
    58,
    4,
    100,
    94,
    249,
    72,
    182,
    44,
    204,
    46,
    90,
    120,
    171,
    6,
    211,
    163,
    104,
    157,
    248,
    175,
    86,
    98,
    120,
    211,
    28,
    84,
    210,
    83,
    253,
    213,
    214,
    228,
    115,
    127,
    28,
    185,
    102,
    254,
    4,
    138,
    149,
    108,
    234,
    8,
    76,
    122,
    128,
    81,
    64,
    65,
    59,
    242,
    98,
    95,
    249,
    141,
    130,
    56,
    57,
    237,
    57,
    204,
    158,
    232,
    142,
    8,
    202,
    255,
    166,
    71,
    94,
    145,
    114,
    177,
    121,
    242,
    80,
    132,
    201,
    246,
    168,
    35,
    159,
    158,
    58,
    32,
    152,
    127,
    27,
    147,
    140,
    11,
    121,
    131,
    124,
    85,
    59,
    3,
    241,
    128,
    139,
    226,
    216,
    104,
    225,
    210,
    205,
    120,
    250,
    244,
    185,
    53,
    188,
    39,
    237,
    54,
    175,
    67,
    113,
    1,
    237,
    7,
    186,
    45,
    59,
    69,
    113,
    22,
    68,
    75,
    105,
    66,
    220,
    126,
    239,
    192,
    96,
    115,
    59,
    20,
    47,
    210,
    171,
    167,
    9,
    111,
    208,
    46,
    240,
    175,
    200,
    82,
    28,
    63,
    230,
    82,
    82,
    93,
    150,
    176,
    44,
    156,
    7,
    165,
    193,
    24,
    204,
    68,
    230,
    217,
    185,
    90,
    119,
    69,
    71,
    176,
    0,
    154,
    44,
    219,
    156,
    100,
    190,
    112,
    6,
    47,
    6,
    18,
    235,
    16,
    245,
    106,
    60,
    91,
    90,
    117,
    173,
    64,
    140,
    167,
    207,
    105,
    185,
    252,
    90,
    220,
    10,
    253,
    177,
    134,
    111,
    89,
    226,
    101,
    188,
    168,
    32,
    89,
    196,
    21,
    82,
    88,
    111,
    188,
    134,
    68,
    157,
    63,
    159,
    181,
    225,
    47,
    193,
    55,
    104,
    106,
    57,
    121,
    169,
    43,
    217,
    108,
    51,
    198,
    8,
    248,
    219,
    247,
    90,
    210,
    206,
    122,
    34,
    46,
    175,
    23,
    170,
    4,
    1,
    4,
    88,
    231,
    18,
    36,
    203,
    249,
    88,
    154,
    102,
    108,
    153,
    61,
    133,
    44,
    6,
    240,
    88,
    222,
    82,
    151,
    7,
    89,
    118,
    134,
    8,
    26,
    133,
    240,
    72,
    106,
    14,
    35,
    211,
    7,
    32,
    170,
    82,
    252,
    217,
    34,
    251,
    164,
    7,
    70,
    142,
    173,
    5,
    162,
    238,
    146,
    42,
    1,
    231,
    146,
    74,
    213,
    228,
    35,
    113,
    80,
    16,
    85,
    48,
    208,
    176,
    82,
    136,
    249,
    154,
    241,
    35,
    119,
    153,
    133,
    237,
    115,
    224,
    124,
    207,
    124,
    168,
    208,
    1,
    111,
    96,
    42,
    181,
    249,
    126,
    86,
    224,
    164,
    83,
    241,
    181,
    94,
    241,
    104,
    78,
    164,
    189,
    2,
    76,
    27,
    45,
    49,
    133,
    49,
    47,
    126,
    140,
    33,
    20,
    218,
    188,
    58,
    194,
    114,
    174,
    26,
    253,
    83,
    199,
    216,
    174,
    73,
    211,
    111,
    177,
    123,
    124,
    178,
    220,
    120,
    126,
    69,
    94,
    38,
    249,
    197,
    164,
    151,
    128,
    35,
    0,
    89,
    86,
    2,
    145,
    73,
    54,
    183,
    195,
    125,
    61,
    246,
    77,
    38,
    91,
    202,
    134,
    136,
    201,
    240,
    8,
    142,
    82,
    125,
    214,
    118,
    72,
    156,
    131,
    226,
    225,
    38,
    179,
    59,
    39,
    137,
    225,
    58,
    192,
    5,
    157,
    214,
    210,
    203,
    131,
    88,
    239,
    2,
    3,
    1,
    0,
    1,
    163,
    84,
    48,
    82,
    48,
    14,
    6,
    3,
    85,
    29,
    15,
    1,
    1,
    255,
    4,
    4,
    3,
    2,
    1,
    134,
    48,
    15,
    6,
    3,
    85,
    29,
    19,
    1,
    1,
    255,
    4,
    5,
    48,
    3,
    1,
    1,
    255,
    48,
    29,
    6,
    3,
    85,
    29,
    14,
    4,
    22,
    4,
    20,
    75,
    254,
    38,
    90,
    148,
    193,
    246,
    51,
    195,
    131,
    72,
    38,
    221,
    243,
    229,
    176,
    100,
    178,
    170,
    149,
    48,
    16,
    6,
    9,
    43,
    6,
    1,
    4,
    1,
    130,
    55,
    21,
    1,
    4,
    3,
    2,
    1,
    0,
    48,
    13,
    6,
    9,
    42,
    134,
    72,
    134,
    247,
    13,
    1,
    1,
    12,
    5,
    0,
    3,
    130,
    2,
    1,
    0,
    46,
    3,
    64,
    202,
    15,
    8,
    208,
    3,
    77,
    59,
    255,
    8,
    216,
    24,
    105,
    76,
    235,
    27,
    203,
    3,
    118,
    97,
    41,
    146,
    132,
    9,
    162,
    131,
    152,
    120,
    176,
    43,
    90,
    37,
    35,
    53,
    117,
    21,
    240,
    3,
    233,
    30,
    99,
    163,
    194,
    93,
    1,
    45,
    252,
    244,
    64,
    64,
    8,
    135,
    53,
    195,
    133,
    231,
    54,
    238,
    57,
    77,
    65,
    195,
    246,
    121,
    103,
    185,
    61,
    162,
    75,
    116,
    225,
    235,
    188,
    10,
    196,
    182,
    6,
    151,
    62,
    60,
    232,
    61,
    142,
    206,
    165,
    6,
    217,
    162,
    128,
    206,
    75,
    88,
    144,
    135,
    214,
    10,
    12,
    15,
    73,
    9,
    98,
    156,
    228,
    104,
    44,
    241,
    213,
    55,
    67,
    223,
    40,
    232,
    211,
    20,
    177,
    128,
    104,
    90,
    110,
    78,
    72,
    187,
    91,
    40,
    15,
    115,
    177,
    133,
    76,
    136,
    21,
    204,
    90,
    150,
    232,
    112,
    146,
    37,
    72,
    54,
    221,
    201,
    135,
    46,
    198,
    237,
    82,
    83,
    148,
    76,
    36,
    147,
    109,
    64,
    160,
    234,
    208,
    197,
    75,
    9,
    31,
    71,
    246,
    25,
    120,
    216,
    74,
    20,
    181,
    175,
    218,
    139,
    63,
    50,
    223,
    239,
    41,
    28,
    58,
    110,
    182,
    140,
    113,
    166,
    45,
    149,
    89,
    186,
    48,
    115,
    44,
    135,
    77,
    147,
    86,
    229,
    140,
    255,
    85,
    184,
    101,
    190,
    112,
    132,
    129,
    195,
    57,
    13,
    120,
    67,
    12,
    22,
    231,
    220,
    47,
    108,
    97,
    234,
    207,
    232,
    137,
    73,
    215,
    137,
    193,
    86,
    188,
    110,
    196,
    234,
    42,
    15,
    157,
    172,
    152,
    94,
    177,
    242,
    221,
    24,
    122,
    241,
    114,
    231,
    133,
    250,
    115,
    120,
    44,
    239,
    111,
    63,
    200,
    227,
    35,
    21,
    223,
    202,
    134,
    163,
    247,
    0,
    99,
    99,
    137,
    165,
    117,
    46,
    184,
    63,
    217,
    108,
    142,
    107,
    79,
    233,
    81,
    4,
    73,
    3,
    91,
    89,
    49,
    28,
    255,
    28,
    167,
    9,
    17,
    192,
    106,
    41,
    87,
    207,
    160,
    95,
    98,
    146,
    82,
    231,
    8,
    32,
    222,
    37,
    243,
    250,
    235,
    52,
    49,
    23,
    241,
    61,
    27,
    229,
    79,
    129,
    82,
    168,
    142,
    237,
    158,
    88,
    159,
    16,
    178,
    107,
    241,
    244,
    100,
    140,
    38,
    66,
    116,
    229,
    45,
    20,
    212,
    217,
    245,
    190,
    56,
    97,
    190,
    199,
    34,
    43,
    140,
    200,
    191,
    210,
    94,
    191,
    201,
    99,
    212,
    144,
    128,
    36,
    54,
    219,
    210,
    255,
    35,
    187,
    81,
    36,
    85,
    44,
    246,
    237,
    25,
    89,
    55,
    66,
    183,
    186,
    29,
    202,
    154,
    112,
    37,
    243,
    18,
    50,
    13,
    112,
    152,
    70,
    17,
    88,
    60,
    221,
    143,
    39,
    51,
    230,
    62,
    107,
    210,
    116,
    149,
    73,
    199,
    202,
    211,
    18,
    21,
    145,
    60,
    230,
    31,
    60,
    58,
    199,
    145,
    75,
    100,
    48,
    170,
    58,
    51,
    82,
    141,
    163,
    212,
    58,
    48,
    154,
    20,
    146,
    82,
    255,
    77,
    107,
    144,
    30,
    219,
    108,
    156,
    114,
    32,
    100,
    17,
    148,
    170,
    241,
    174,
    43,
    74,
    92,
    42,
    182,
    22,
    132,
    44,
    218,
    94,
    161,
    50,
    212,
    147,
    168,
    149,
    161,
    73,
    10,
    254,
    34,
    239,
    104,
    203,
    235,
    145,
    216,
    253,
    200,
    150,
    53,
    59,
    248,
    47,
    149,
    243,
    118,
    106,
    35,
    83,
    73,
    63,
    246,
    109,
    223,
    143,
    3,
    132,
    65,
    78,
    129,
    189,
    173,
    121,
    250,
    188,
    217,
    20,
    89,
    214,
    203,
    137,
    181,
]
