libraries/attestation/azure-trusted-launch-attestation/src/generate/snapshots/azure_trusted_launch_attestation__generate__collateral__get_ak_cert_chain.snap
---
source: azure-trusted-launch-attestation/src/generate/collateral.rs
expression: "ak_cert_chain[1]"
---
[
    48,
    130,
    5,
    156,
    48,
    130,
    3,
    132,
    160,
    3,
    2,
    1,
    2,
    2,
    19,
    51,
    0,
    0,
    0,
    2,
    192,
    209,
    123,
    75,
    143,
    151,
    156,
    53,
    0,
    0,
    0,
    0,
    0,
    2,
    48,
    13,
    6,
    9,
    42,
    134,
    72,
    134,
    247,
    13,
    1,
    1,
    12,
    5,
    0,
    48,
    105,
    49,
    11,
    48,
    9,
    6,
    3,
    85,
    4,
    6,
    19,
    2,
    85,
    83,
    49,
    30,
    48,
    28,
    6,
    3,
    85,
    4,
    10,
    19,
    21,
    77,
    105,
    99,
    114,
    111,
    115,
    111,
    102,
    116,
    32,
    67,
    111,
    114,
    112,
    111,
    114,
    97,
    116,
    105,
    111,
    110,
    49,
    58,
    48,
    56,
    6,
    3,
    85,
    4,
    3,
    19,
    49,
    65,
    122,
    117,
    114,
    101,
    32,
    86,
    105,
    114,
    116,
    117,
    97,
    108,
    32,
    84,
    80,
    77,
    32,
    82,
    111,
    111,
    116,
    32,
    67,
    101,
    114,
    116,
    105,
    102,
    105,
    99,
    97,
    116,
    101,
    32,
    65,
    117,
    116,
    104,
    111,
    114,
    105,
    116,
    121,
    32,
    50,
    48,
    50,
    51,
    48,
    30,
    23,
    13,
    50,
    51,
    48,
    54,
    48,
    56,
    49,
    55,
    53,
    51,
    48,
    52,
    90,
    23,
    13,
    50,
    53,
    49,
    49,
    48,
    51,
    49,
    55,
    53,
    51,
    48,
    52,
    90,
    48,
    37,
    49,
    35,
    48,
    33,
    6,
    3,
    85,
    4,
    3,
    19,
    26,
    71,
    108,
    111,
    98,
    97,
    108,
    32,
    86,
    105,
    114,
    116,
    117,
    97,
    108,
    32,
    84,
    80,
    77,
    32,
    67,
    65,
    32,
    45,
    32,
    48,
    49,
    48,
    130,
    1,
    34,
    48,
    13,
    6,
    9,
    42,
    134,
    72,
    134,
    247,
    13,
    1,
    1,
    1,
    5,
    0,
    3,
    130,
    1,
    15,
    0,
    48,
    130,
    1,
    10,
    2,
    130,
    1,
    1,
    0,
    191,
    54,
    170,
    46,
    28,
    96,
    104,
    189,
    54,
    157,
    195,
    81,
    139,
    49,
    6,
    13,
    197,
    106,
    196,
    114,
    35,
    210,
    135,
    184,
    4,
    237,
    92,
    108,
    125,
    182,
    207,
    8,
    77,
    18,
    125,
    51,
    188,
    208,
    225,
    118,
    173,
    162,
    221,
    69,
    131,
    118,
    128,
    69,
    132,
    216,
    58,
    252,
    249,
    48,
    212,
    184,
    6,
    255,
    88,
    17,
    114,
    115,
    56,
    84,
    213,
    161,
    197,
    62,
    203,
    32,
    240,
    29,
    255,
    13,
    62,
    169,
    77,
    121,
    67,
    150,
    136,
    75,
    44,
    245,
    164,
    141,
    133,
    62,
    58,
    228,
    245,
    252,
    187,
    59,
    71,
    56,
    208,
    5,
    237,
    172,
    123,
    243,
    9,
    200,
    246,
    136,
    37,
    114,
    58,
    42,
    0,
    176,
    120,
    252,
    59,
    17,
    197,
    133,
    10,
    23,
    188,
    104,
    36,
    212,
    48,
    118,
    1,
    27,
    66,
    110,
    227,
    19,
    101,
    49,
    53,
    29,
    254,
    215,
    46,
    233,
    174,
    119,
    9,
    121,
    250,
    54,
    174,
    60,
    186,
    108,
    37,
    104,
    151,
    165,
    70,
    31,
    162,
    213,
    253,
    47,
    115,
    0,
    118,
    9,
    143,
    239,
    249,
    25,
    98,
    193,
    191,
    252,
    12,
    206,
    68,
    119,
    209,
    84,
    29,
    147,
    138,
    202,
    158,
    85,
    157,
    172,
    61,
    25,
    105,
    104,
    51,
    142,
    172,
    45,
    4,
    255,
    125,
    209,
    193,
    210,
    57,
    174,
    129,
    243,
    89,
    205,
    167,
    228,
    146,
    20,
    0,
    98,
    35,
    75,
    222,
    54,
    13,
    96,
    86,
    71,
    231,
    242,
    32,
    81,
    246,
    9,
    255,
    44,
    155,
    194,
    124,
    40,
    196,
    231,
    85,
    216,
    213,
    116,
    67,
    104,
    190,
    63,
    147,
    220,
    111,
    69,
    141,
    25,
    162,
    88,
    227,
    182,
    170,
    58,
    63,
    1,
    2,
    3,
    1,
    0,
    1,
    163,
    130,
    1,
    127,
    48,
    130,
    1,
    123,
    48,
    18,
    6,
    3,
    85,
    29,
    19,
    1,
    1,
    255,
    4,
    8,
    48,
    6,
    1,
    1,
    255,
    2,
    1,
    0,
    48,
    14,
    6,
    3,
    85,
    29,
    15,
    1,
    1,
    255,
    4,
    4,
    3,
    2,
    2,
    4,
    48,
    23,
    6,
    3,
    85,
    29,
    37,
    4,
    16,
    48,
    14,
    6,
    5,
    103,
    129,
    5,
    8,
    1,
    6,
    5,
    103,
    129,
    5,
    8,
    3,
    48,
    29,
    6,
    3,
    85,
    29,
    14,
    4,
    22,
    4,
    20,
    255,
    246,
    206,
    231,
    168,
    193,
    72,
    105,
    40,
    203,
    138,
    75,
    242,
    216,
    129,
    129,
    181,
    109,
    128,
    129,
    48,
    31,
    6,
    3,
    85,
    29,
    35,
    4,
    24,
    48,
    22,
    128,
    20,
    75,
    254,
    38,
    90,
    148,
    193,
    246,
    51,
    195,
    131,
    72,
    38,
    221,
    243,
    229,
    176,
    100,
    178,
    170,
    149,
    48,
    118,
    6,
    3,
    85,
    29,
    31,
    4,
    111,
    48,
    109,
    48,
    107,
    160,
    105,
    160,
    103,
    134,
    101,
    104,
    116,
    116,
    112,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    109,
    105,
    99,
    114,
    111,
    115,
    111,
    102,
    116,
    46,
    99,
    111,
    109,
    47,
    112,
    107,
    105,
    111,
    112,
    115,
    47,
    99,
    114,
    108,
    47,
    65,
    122,
    117,
    114,
    101,
    37,
    50,
    48,
    86,
    105,
    114,
    116,
    117,
    97,
    108,
    37,
    50,
    48,
    84,
    80,
    77,
    37,
    50,
    48,
    82,
    111,
    111,
    116,
    37,
    50,
    48,
    67,
    101,
    114,
    116,
    105,
    102,
    105,
    99,
    97,
    116,
    101,
    37,
    50,
    48,
    65,
    117,
    116,
    104,
    111,
    114,
    105,
    116,
    121,
    37,
    50,
    48,
    50,
    48,
    50,
    51,
    46,
    99,
    114,
    108,
    48,
    129,
    131,
    6,
    8,
    43,
    6,
    1,
    5,
    5,
    7,
    1,
    1,
    4,
    119,
    48,
    117,
    48,
    115,
    6,
    8,
    43,
    6,
    1,
    5,
    5,
    7,
    48,
    2,
    134,
    103,
    104,
    116,
    116,
    112,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    109,
    105,
    99,
    114,
    111,
    115,
    111,
    102,
    116,
    46,
    99,
    111,
    109,
    47,
    112,
    107,
    105,
    111,
    112,
    115,
    47,
    99,
    101,
    114,
    116,
    115,
    47,
    65,
    122,
    117,
    114,
    101,
    37,
    50,
    48,
    86,
    105,
    114,
    116,
    117,
    97,
    108,
    37,
    50,
    48,
    84,
    80,
    77,
    37,
    50,
    48,
    82,
    111,
    111,
    116,
    37,
    50,
    48,
    67,
    101,
    114,
    116,
    105,
    102,
    105,
    99,
    97,
    116,
    101,
    37,
    50,
    48,
    65,
    117,
    116,
    104,
    111,
    114,
    105,
    116,
    121,
    37,
    50,
    48,
    50,
    48,
    50,
    51,
    46,
    99,
    114,
    116,
    48,
    13,
    6,
    9,
    42,
    134,
    72,
    134,
    247,
    13,
    1,
    1,
    12,
    5,
    0,
    3,
    130,
    2,
    1,
    0,
    72,
    83,
    195,
    29,
    186,
    91,
    229,
    218,
    167,
    188,
    215,
    19,
    22,
    192,
    194,
    113,
    216,
    180,
    222,
    164,
    7,
    135,
    72,
    25,
    119,
    96,
    64,
    136,
    144,
    203,
    147,
    144,
    150,
    219,
    18,
    143,
    104,
    241,
    238,
    166,
    127,
    105,
    254,
    103,
    228,
    233,
    211,
    5,
    15,
    160,
    92,
    207,
    44,
    137,
    88,
    169,
    129,
    160,
    8,
    116,
    25,
    27,
    26,
    3,
    163,
    9,
    190,
    155,
    232,
    196,
    222,
    213,
    138,
    69,
    0,
    126,
    31,
    66,
    255,
    30,
    87,
    4,
    213,
    15,
    56,
    129,
    48,
    61,
    4,
    40,
    141,
    244,
    135,
    66,
    91,
    20,
    162,
    221,
    73,
    210,
    158,
    227,
    195,
    189,
    47,
    15,
    147,
    217,
    189,
    15,
    5,
    123,
    204,
    20,
    147,
    146,
    117,
    148,
    251,
    153,
    225,
    136,
    146,
    147,
    113,
    74,
    169,
    128,
    103,
    228,
    77,
    202,
    183,
    139,
    198,
    41,
    125,
    146,
    115,
    99,
    23,
    156,
    166,
    61,
    61,
    17,
    112,
    98,
    185,
    219,
    227,
    48,
    26,
    81,
    37,
    5,
    191,
    227,
    115,
    235,
    39,
    134,
    191,
    153,
    37,
    157,
    96,
    174,
    49,
    100,
    203,
    211,
    115,
    140,
    36,
    226,
    19,
    148,
    134,
    251,
    161,
    247,
    98,
    8,
    135,
    10,
    167,
    215,
    175,
    66,
    247,
    53,
    27,
    127,
    65,
    158,
    72,
    130,
    75,
    134,
    144,
    211,
    222,
    50,
    249,
    248,
    38,
    55,
    175,
    23,
    0,
    33,
    92,
    92,
    65,
    168,
    150,
    9,
    238,
    102,
    58,
    212,
    194,
    110,
    89,
    55,
    114,
    134,
    26,
    20,
    38,
    12,
    230,
    102,
    141,
    97,
    75,
    225,
    141,
    202,
    227,
    10,
    104,
    160,
    75,
    173,
    229,
    48,
    181,
    205,
    114,
    236,
    180,
    71,
    221,
    129,
    134,
    121,
    222,
    123,
    29,
    180,
    61,
    110,
    108,
    140,
    118,
    19,
    187,
    199,
    194,
    153,
    54,
    176,
    67,
    95,
    111,
    220,
    68,
    188,
    235,
    10,
    106,
    82,
    82,
    87,
    102,
    40,
    203,
    189,
    27,
    135,
    105,
    205,
    122,
    93,
    123,
    138,
    69,
    48,
    230,
    226,
    84,
    90,
    198,
    70,
    175,
    63,
    244,
    115,
    14,
    39,
    6,
    101,
    66,
    252,
    225,
    193,
    10,
    116,
    61,
    67,
    24,
    254,
    2,
    20,
    230,
    183,
    246,
    222,
    125,
    76,
    212,
    205,
    250,
    180,
    206,
    96,
    228,
    33,
    51,
    197,
    5,
    6,
    181,
    86,
    134,
    244,
    0,
    83,
    37,
    13,
    179,
    138,
    48,
    249,
    192,
    58,
    60,
    227,
    75,
    219,
    206,
    124,
    138,
    183,
    120,
    161,
    138,
    106,
    212,
    179,
    226,
    234,
    164,
    240,
    205,
    95,
    44,
    91,
    194,
    248,
    155,
    113,
    152,
    157,
    193,
    39,
    97,
    187,
    68,
    38,
    82,
    140,
    152,
    178,
    4,
    143,
    217,
    151,
    223,
    228,
    79,
    36,
    179,
    157,
    225,
    219,
    20,
    18,
    51,
    124,
    243,
    218,
    166,
    150,
    85,
    45,
    111,
    86,
    161,
    184,
    204,
    45,
    4,
    125,
    25,
    206,
    235,
    154,
    32,
    60,
    247,
    235,
    180,
    174,
    153,
    136,
    89,
    149,
    29,
    37,
    143,
    246,
    243,
    228,
    21,
    197,
    13,
    96,
    57,
    216,
    65,
    117,
    191,
    76,
    10,
    206,
    252,
    144,
    158,
    216,
    143,
    190,
    24,
    41,
    76,
    236,
    7,
    3,
    67,
    5,
    139,
    197,
    202,
    41,
    206,
    201,
    6,
    65,
    209,
    205,
    51,
    92,
    204,
    178,
    154,
    209,
    71,
    6,
    26,
    86,
    148,
    201,
    31,
    174,
    241,
    120,
    215,
    90,
    235,
    230,
    59,
    32,
    227,
    201,
    97,
    59,
    242,
    161,
    113,
    207,
]
